# kestrel-mail

./: .gitignore  .gitmodules  .openclaw-sanity  CMakeLists.txt  NOTES_IMAP_POOL.md  README.md  TODO.md  kestrel-mail.desktop
.claude/: settings.local.json
Screenshots/: Screencast_20260319_025819.webm
build-release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  ecm_uninstall.cmake  kestrel-imap-lab  kestrel-mail  mailio.pc
build-release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-release/.qt/deploy_qml_imports/: kestrel_imap_lab.cmake  kestrel_mail.cmake
build-release/.qt/qml_imports/: kestrel-imap-lab_build.cmake  kestrel-imap-lab_build.rsp  kestrel-imap-lab_conf.rsp  kestrel-mail_build.cmake  kestrel-mail_build.rsp  kestrel-mail_conf.rsp
build-release/.qt/rcc/: kestrel_imap_lab_qml.qrc  kestrel_mail_data.qrc  kestrel_mail_qml.qrc  qrc_kestrel_imap_lab_qml.cpp  qrc_kestrel_mail_data.cpp  qrc_kestrel_mail_qml.cpp
build-release/kestrel-imap-lab_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/kestrel-imap-lab_autogen/GMAU43TCVU/: moc_accountrepository.cpp.d
build-release/kestrel-imap-lab_autogen/MR466ZQLAD/: moc_imaplabcontroller.cpp  moc_imaplabcontroller.cpp.d
build-release/kestrel-mail_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-release/kestrel-mail_autogen/GMAU43TCVU/: moc_accountrepository.cpp  moc_accountrepository.cpp.d  moc_accountsetupcontroller.cpp  moc_accountsetupcontroller.cpp.d  moc_providerprofileservice.cpp  moc_providerprofileservice.cpp.d
build-release/kestrel-mail_autogen/HBQBEVC6CZ/: moc_smtpservice.cpp  moc_smtpservice.cpp.d
build-release/kestrel-mail_autogen/N6VEPVM3ZJ/: moc_imapservice.cpp  moc_imapservice.cpp.d
build-release/kestrel-mail_autogen/OQ3OECGN5T/: moc_oauthservice.cpp  moc_oauthservice.cpp.d
build-release/kestrel-mail_autogen/PRMOGMWJPH/: moc_htmlprocessor.cpp  moc_htmlprocessor.cpp.d
build-release/kestrel-mail_autogen/T23PYNIWXK/: moc_datastore.cpp  moc_datastore.cpp.d  moc_messagelistmodel.cpp  moc_messagelistmodel.cpp.d
build-release/kestrel-mail_autogen/TLRNX4OVAP/: moc_backgroundworker.cpp  moc_backgroundworker.cpp.d  moc_idlewatcher.cpp  moc_idlewatcher.cpp.d
cmake/: decrypt_providers.cmake
data/: kestrel-mail.notifyrc  providers.json  providers.json.enc
docs/: ARCHITECTURE.md  CNAME  MAIL_PARITY_PLAN.md  MULTI_ACCOUNT_DESIGN.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md  encryption-create-keypair.html  encryption-save-key.html  encryption-share-key.html  encryption.html  index.html  message-list-performance.md
qml/: ImapLab.qml  Main.qml
qml/components/: AccountWizardDialog.qml  AccountWizardStep1.qml  AccountWizardStep2.qml  AttachmentHoverPopup.qml  AvatarBadge.qml  CollapsedPaneRail.qml  ContactHoverPopup.qml  DarkLightToggleButton.qml  FolderItemDelegate.qml  FolderSectionButton.qml  HeaderUtilityButton.qml  IconOnlyFlatButton.qml  MailActionButton.qml  MessageContentPane.qml  MessageListPane.qml  OAuthBrowserWindow.qml  PaneDivider.qml  PaneHeaderBar.qml  PaneIconButton.qml  PaneIconStrip.qml  PopupMenu.qml  RecentSearchesDropdown.qml  SearchBar.qml  SearchBarFolderScope.qml  SearchFilterPopup.qml  StyledButton.qml  TitleBarIconButton.qml  qmldir
qml/components/AccountConfig/: AccountConfigDiagnostics.qml  AccountConfigDialog.qml  AccountConfigGeneral.qml  AccountConfigGoogleCalendar.qml  AccountConfigImap.qml  AccountConfigSidebar.qml  AccountConfigSmtp.qml
qml/components/AccountWizard/: AccountWizardDialog.qml  AccountWizardStep1.qml  AccountWizardStep2.qml  AccountWizardStep3.qml  AvatarChooserDialog.qml  ManualIdentityStep.qml  ManualIncomingStep.qml  ManualOutgoingStep.qml  ManualTestStep.qml
qml/components/Attachments/: AttachmentCard.qml  AttachmentHoverPopup.qml
qml/components/Calendar/: CalendarAllDayRow.qml  CalendarEventCard.qml  CalendarPane.qml  CalendarSidebarPane.qml  CalendarTimeGutter.qml  CalendarTopBar.qml  CalendarWeekGrid.qml  CalendarWeekHeader.qml  InviteCard.qml
qml/components/Common/: ArrowPopup.qml  AvatarBadge.qml  BarberPoleProgressBar.qml  KestrelColors.qml  TextToolTip.qml
qml/components/Compose/: Compose.qml
qml/components/Contacts/: ContactCard.qml  ContactDetailPane.qml  ContactGroupsSidebar.qml  ContactList.qml  ContactsPane.qml
qml/components/Layout/: CollapsedPaneRail.qml  DarkLightToggleButton.qml  FolderItemDelegate.qml  FolderPane.qml  FolderSectionButton.qml  HeaderUtilityButton.qml  MailActionButton.qml  MailToolbar.qml  PaneHeaderBar.qml  PaneIconButton.qml  RightPane.qml  SplitViewOverlay.qml  TitleBar.qml  WindowResizeHandles.qml
qml/components/MessageContent/: ContactHoverPopup.qml  MessageContentPane.qml  MessageHtmlView.qml  MessageInfoBars.qml  MessageThreadView.qml
qml/components/MessageList/: MessageCard.qml  MessageCardAvatar.qml  MessageCardDragVisual.qml  MessageCardIndicators.qml  MessageCategoryButton.qml  MessageListHeader.qml  MessageListPane.qml
qml/components/Messages/: MessageCard.qml  MessageCardStatusColumn.qml  MessageCategoryButton.qml
qml/components/Search/: SearchBar.qml  SearchBarFolderScope.qml  SearchFilterPopup.qml
qml/utils/: ColorUtilities.js  ComposeUtils.js  DisplayUtils.js  FolderUtils.js  MailActions.js
scripts/: send-test-email.py
src/: imaplab_main.cpp  main.cpp
src/core/: htmlprocessor.cpp  htmlprocessor.h  utils.h
src/core/accounts/: accountmanager.cpp  accountmanager.h  accountrepository.cpp  accountrepository.h  accountsetupcontroller.cpp  accountsetupcontroller.h  baseaccount.cpp  baseaccount.h  gmailaccount.cpp  gmailaccount.h  iaccount.cpp  iaccount.h  imapaccount.cpp  imapaccount.h  providerprofileservice.cpp  (+1 more)
src/tools/: imaplabcontroller.cpp  imaplabcontroller.h
src/ui/: calendarlayouthelper.cpp  calendarlayouthelper.h  splashscreen.cpp  splashscreen.h
tools/: analyze_mapping_diff.py  analyze_mapping_latest.sh  analyze_sync_events.py  analyze_sync_latest.sh  compare_kestrel_vs_sync_labels.py  compare_latest.sh  compare_mappings.py  parity_report.sh  probe_only_em_latest.sh  probe_only_em_presence.py
(+70 files in other folders)
